--- a/paginaweb.html
+++ b/paginaweb.html
@@ -28,13 +28,13 @@
               <label for="answer"> Answer</label>
               <textarea id="answer"></textarea>
               <div>
-                  <button>Save</button>
-                  <button>Close</button>
+                  <button onclick="addFlashcard()">Save</button>
+                  <button onclick="hideCreateBox()">Close</button>
               </div>
-
           </div>
-
+          <div class="flashcards"> </div>
       </div>
+     <script src="jspart.js"></script>
 
 </body>
 </html>
